--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -69,7 +69,7 @@
 
         <div class="py-10"></div>
 
-        <div id="zip-down-progress" class="hidden fixed bottom-4 left-4 bg-blue-900 text-white px-4 py-2 rounded-md">
+        <div id="zip-down-progress" class="fixed hidden bottom-4 left-4 bg-blue-900 text-white px-4 py-2 rounded-md">
         </div>
 
         <!-- <div>UPLOD <button onclick="gotoUploadPage()">uppp -></button>
