`/browse` navbar in the bottom while in a mobile and to the top while in a large screen

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,7 +26,7 @@
                             d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
                     </svg>
                 </button>
-                <div class="hidden md:flex md:flex-row md:gap-2 absolute md:static top-14 right-2 px-2 py-1 bg-white md:bg-inherit"
+                <div class="hidden md:flex md:flex-row md:gap-2 absolute md:static bottom-16 right-2 px-2 py-1 bg-white md:bg-inherit"
                     id="zip-options">
                     <button
                         onclick="window.location.href = `/upload?cwd=${encodeURIComponent(window.location.pathname)}`"
@@ -73,7 +73,7 @@
                             <path
                                 d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
                         </svg>
-                        <span class="whitespace-nowrap">Clear all</span>
+                        <span class="whitespace-nowrap">Clear selections</span>
                     </button>
                 </div>
             </div>
