--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -83,8 +83,8 @@
         <!-- this is because of the nab bar -->
         <div class="py-10 hidden md:block"></div>
 
-        <div id="zip-down-progress" class="fixed hidden bottom-4 left-4 bg-blue-900 text-white px-4 py-2 rounded-md">
-        </div>
+        <div id="zip-down-progress"
+            class="hidden fixed bottom-20 md:bottom-4 left-4 bg-blue-900 text-white px-4 py-2 rounded-md"></div>
 
         <!-- <div>UPLOD <button onclick="gotoUploadPage()">uppp -></button>
         </div> -->
@@ -149,7 +149,6 @@
 
     <script>
         // {{ template "zip.js"}}
-        // {{ template "zip_ssr.js"}}
     </script>
 </body>
 
