--- a/frontend/src/upload.html
+++ b/frontend/src/upload.html
@@ -9,50 +9,64 @@
 </head>
 
 <body>
-    <div class="w-[70vw] mx-auto my-[10vh]">
-        <h1>Upload files</h1>
-        <h2><span>Current directory: <span id="cwd"></span></span>
-            <button onclick="mkdir()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-folder-plus" viewBox="0 0 16 16">
-                    <path
-                        d="m.5 3 .04.87a2 2 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2m5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19q-.362.002-.683.12L1.5 2.98a1 1 0 0 1 1-.98z" />
-                    <path
-                        d="M13.5 9a.5.5 0 0 1 .5.5V11h1.5a.5.5 0 1 1 0 1H14v1.5a.5.5 0 1 1-1 0V12h-1.5a.5.5 0 0 1 0-1H13V9.5a.5.5 0 0 1 .5-.5" />
-                </svg>
-            </button>
-        </h2>
+    <div class="w-[90vw] md:w-[60vw] mx-auto my-[10vh] text-lg">
+        <h1 class="text-3xl font-bold">Upload files</h1>
+        <div class="mt-2 mb-4">
+            <div class="mb-2 flex flex-row items-center gap-1">
+                <span class="whitespace-nowrap">Directory:</span>
+                <a href="#"
+                    class="block w-[85vw] md:w-[55vw] py-2 whitespace-nowrap overflow-x-scroll hover:underline ease-in duration-100"
+                    id="cwd">Lorem
+                    ipsum
+                    dolor sit amet consectetur adipisicing elit. Suscipit, minima accusantium
+                    quibusdam nihil, excepturi, ipsam ipsa reiciendis quo veritatis itaque accusamus! Ad expedita iure
+                    asperiores distinctio harum eligendi accusamus officiis!
+                </a>
+            </div>
+
+            <div>
+                <button onclick="mkdir()"
+                    class="flex flex-row items-center gap-2 px-4 py-2 rounded bg-blue-100 hover:bg-blue-200 ease-in duration-100">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-folder-plus" viewBox="0 0 16 16">
+                        <path
+                            d="m.5 3 .04.87a2 2 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2m5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19q-.362.002-.683.12L1.5 2.98a1 1 0 0 1 1-.98z" />
+                        <path
+                            d="M13.5 9a.5.5 0 0 1 .5.5V11h1.5a.5.5 0 1 1 0 1H14v1.5a.5.5 0 1 1-1 0V12h-1.5a.5.5 0 0 1 0-1H13V9.5a.5.5 0 0 1 .5-.5" />
+                    </svg>
+                    <span>Create directory</span>
+                </button>
+            </div>
+        </div>
 
         <div>
             <input type="file" id="fileInput" multiple hidden style="display: none;">
-            <div id="fileInputLabel">Select files here</div>
-            <button id="fileInputBtn" class="bg-red-400">Choose Files</button>
 
-            <div class="flex flex-row items-center gap-2">
-                <label for="fileCheckSum" class="flex flex-row items-center gap-1">
-                    <span>Validate</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-clipboard2-check-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M10 .5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5.5.5 0 0 1-.5.5.5.5 0 0 0-.5.5V2a.5.5 0 0 0 .5.5h5A.5.5 0 0 0 11 2v-.5a.5.5 0 0 0-.5-.5.5.5 0 0 1-.5-.5" />
-                        <path
-                            d="M4.085 1H3.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1h-.585q.084.236.085.5V2a1.5 1.5 0 0 1-1.5 1.5h-5A1.5 1.5 0 0 1 4 2v-.5q.001-.264.085-.5m6.769 6.854-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708.708" />
-                    </svg>
-                </label>
-                <input name="fileCheckSum" id="fileCheckSum" type="checkbox" />
+            <div class="my-2">
+                <div id="fileInputLabel" class="mb-2">Select some files</div>
+                <button class="px-4 py-2 rounded bg-blue-100 hover:bg-blue-200 ease-in duration-100"
+                    onclick="fileInput.click();">Choose files</button>
             </div>
 
-            <button id="fileSubmit" onclick="uploadFiles()" class="flex flex-row items-center gap-2">
-                <span>Upload</span>
+            <div class="flex flex-row items-center gap-2 my-4" title="Validate file using shaSum256">
+                <input name="fileCheckSum" id="fileCheckSum" type="checkbox" class="cursor-pointer" checked />
+                <label for="fileCheckSum" class="cursor-pointer">Validate files</label>
+            </div>
+
+            <button id="fileSubmit" onclick="uploadFiles()"
+                class="flex flex-row items-center gap-2 my-2 px-4 py-2 rounded bg-blue-100 hover:bg-blue-200 ease-in duration-100">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-cloud-upload-fill" viewBox="0 0 16 16">
+                    class="bi bi-cloud-upload" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
-                        d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.5 14.5V11h1v3.5a.5.5 0 0 1-1 0" />
+                        d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383" />
+                    <path fill-rule="evenodd"
+                        d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708z" />
                 </svg>
+                <span>Upload</span>
             </button>
             <br>
-            <div id="progress-send">send: --</div>
-            <div id="progress">current: --</div>
+            <div>Send: <span id="progress-send">--</span></div>
+            <div>Current: <span id="progress">--</span></div>
         </div>
     </div>
 
