--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body class="">
-    <div id="backdrop" class="hidden absolute w-[100vw] h-[100vh] bg-[#00000024] top-0 left-0"></div>
+    <div id="backdrop" class="hidden absolute w-[100vw] h-[100vh] bg-[#00000024] top-0 left-0 right-0 bottom-0"></div>
     <div>
         <div
-            class="w-screen px-2 py-4 md:py-2 fixed nav-bottom md:top-0 md:left-0 bg-blue-50 flex flex-row justify-between items-center text-xl">
-            <div class="w-[88vw] md:w-[75vw] overflow-hidden hover:overflow-x-scroll whitespace-nowrap">
+            class="w-screen px-2 py-2 md:py-2 fixed nav-bottom md:top-0 md:left-0 bg-blue-50 flex flex-row justify-between items-center text-xl">
+            <div class="w-[88vw] md:w-[75vw] overflow-hidden hover:overflow-x-scroll whitespace-nowrap flex flex-row items-center">
                 {{range .Umap}}
-                <a class="hover:underline md:ease-in md:duration-100" href="{{.Url}}">{{.Name}}/</a>
+                <a class="block hover:underline md:ease-in md:duration-100 py-2" href="{{.Url}}">{{.Name}}/</a>
                 {{end}}
             </div>
             <div class="relative md:static w-fit">
@@ -26,7 +26,7 @@
                             d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
                     </svg>
                 </button>
-                <div class="hidden md:flex md:flex-row md:gap-2 absolute md:static bottom-16 right-2 px-2 py-1 bg-white md:bg-inherit"
+                <div class="hidden md:flex md:flex-row md:gap-2 absolute md:static bottom-16 right-2 px-2 py-2 bg-white md:bg-inherit"
                     id="zip-options">
                     <button
                         onclick="window.location.href = `/upload?cwd=${encodeURIComponent(window.location.pathname)}`"
