--- a/frontend/src/auth.html
+++ b/frontend/src/auth.html
@@ -13,15 +13,15 @@
     {{template "output.tcss"}}
 </head>
 
-<body class="flex items-center justify-center h-screen">
+<body class="flex md:items-center justify-center h-screen">
 
-    <div class="bg-white p-8 rounded shadow-md sm:w-96 w-full">
+    <div class="bg-white  rounded shadow-md sm:w-96 w-full p-8 pt-[10vh] md:pt-8">
         <h1 class="text-2xl font-semibold mb-6">Login</h1>
 
         <form action="/auth" method="post">
             <div class="mb-4">
                 <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password"  autofocus
+                <input type="password" id="password" name="password" placeholder="Enter your password" autofocus
                     class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500">
             </div>
 
