--- a/frontend/src/upload.html
+++ b/frontend/src/upload.html
@@ -15,7 +15,7 @@
             <div class="mb-2 flex flex-row items-center gap-1">
                 <span class="whitespace-nowrap">Directory:</span>
                 <a href="#"
-                    class="block w-[85vw] md:w-[55vw] py-2 whitespace-nowrap overflow-x-scroll hover:underline ease-in duration-100"
+                    class="block w-[85vw] md:w-[55vw] py-2 whitespace-nowrap overflow-x-scroll md:overflow-hidden md:hover:overflow-x-scroll hover:underline ease-in duration-100"
                     id="cwd">Lorem
                     ipsum
                     dolor sit amet consectetur adipisicing elit. Suscipit, minima accusantium
