--- a/frontend/src/upload.html
+++ b/frontend/src/upload.html
@@ -4,6 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Default favicon for all devices -->
+    <!-- Default favicon for all devices -->
+    <link rel="icon" href="/static/fav/favicon.ico" type="image/x-icon">
+
+    <!-- Apple Touch Icon for iOS devices -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/fav/apple-touch-icon.png">
+
+    <!-- Maskable icons for progressive web apps -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/fav/icon-192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/fav/icon-192-maskable.png" media="(prefers-color-scheme: no-preference)">
+    <link rel="icon" type="image/png" sizes="512x512" href="/static/fav/icon-512.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/static/fav/icon-512-maskable.png" media="(prefers-color-scheme: no-preference)">
     {{template "output.tcss"}}
     <title>Upload</title>
 </head>
@@ -16,12 +29,7 @@
                 <span class="whitespace-nowrap">Directory:</span>
                 <a href="#"
                     class="block w-[85vw] md:w-[55vw] py-2 whitespace-nowrap overflow-x-scroll md:overflow-hidden md:hover:overflow-x-scroll hover:underline ease-in duration-100"
-                    id="cwd">Lorem
-                    ipsum
-                    dolor sit amet consectetur adipisicing elit. Suscipit, minima accusantium
-                    quibusdam nihil, excepturi, ipsam ipsa reiciendis quo veritatis itaque accusamus! Ad expedita iure
-                    asperiores distinctio harum eligendi accusamus officiis!
-                </a>
+                    id="cwd"></a>
             </div>
 
             <div>
