--- a/frontend/src/upload.html
+++ b/frontend/src/upload.html
@@ -14,9 +14,11 @@
 
     <!-- Maskable icons for progressive web apps -->
     <link rel="icon" type="image/png" sizes="192x192" href="/static/fav/icon-192.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/fav/icon-192-maskable.png" media="(prefers-color-scheme: no-preference)">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/fav/icon-192-maskable.png"
+        media="(prefers-color-scheme: no-preference)">
     <link rel="icon" type="image/png" sizes="512x512" href="/static/fav/icon-512.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/static/fav/icon-512-maskable.png" media="(prefers-color-scheme: no-preference)">
+    <link rel="icon" type="image/png" sizes="512x512" href="/static/fav/icon-512-maskable.png"
+        media="(prefers-color-scheme: no-preference)">
     {{template "output.tcss"}}
     <title>Upload</title>
 </head>
@@ -56,10 +58,10 @@
                     onclick="fileInput.click();">Choose files</button>
             </div>
 
-            <div class="flex flex-row items-center gap-2 my-4" title="Validate file using shaSum256">
+            <!-- <div class="flex flex-row items-center gap-2 my-4" title="Validate file using shaSum256">
                 <input name="fileCheckSum" id="fileCheckSum" type="checkbox" class="cursor-pointer" checked />
                 <label for="fileCheckSum" class="cursor-pointer">Validate files</label>
-            </div>
+            </div> -->
 
             <button id="fileSubmit" onclick="uploadFiles()"
                 class="flex flex-row items-center gap-2 my-2 px-4 py-2 rounded bg-blue-100 hover:bg-blue-200 ease-in duration-100">
@@ -79,7 +81,6 @@
     </div>
 
     <script>
-        // {{ template "sum256.js"}}
         // {{ template "up.js"}}
         // {{ template "mkdir.js"}}
     </script>
