--- a/frontend/src/upload.html
+++ b/frontend/src/upload.html
@@ -58,10 +58,10 @@
                     onclick="fileInput.click();">Choose files</button>
             </div>
 
-            <!-- <div class="flex flex-row items-center gap-2 my-4" title="Validate file using shaSum256">
+             <div id="fileCheckSumDiv" class="flex flex-row items-center gap-2 my-4" title="Validate file using shaSum256">
+                <label for="fileCheckSum" class="cursor-pointer">Validate files with sha256:</label>
                 <input name="fileCheckSum" id="fileCheckSum" type="checkbox" class="cursor-pointer" checked />
-                <label for="fileCheckSum" class="cursor-pointer">Validate files</label>
-            </div> -->
+            </div>
 
             <button id="fileSubmit" onclick="uploadFiles()"
                 class="flex flex-row items-center gap-2 my-2 px-4 py-2 rounded bg-blue-100 hover:bg-blue-200 ease-in duration-100">
@@ -81,6 +81,7 @@
     </div>
 
     <script>
+        // {{ template "sum256.js"}}
         // {{ template "up.js"}}
         // {{ template "mkdir.js"}}
     </script>
